# AmpPlugin

./: .clangd  .gitignore  AMP.cpp  AMP.h  CMakeLists.txt  CMakeLists.txt.backup  Main.cpp  README.md  plugin.command  vdjOnlineSource.h
plugin/: cache.cpp  getFolder.cpp  getFolder.h  getFolderList.cpp  getFolderList.h  internet.cpp  search.cpp  search.h  streamUrl.cpp  streamUrl.h  user.cpp  utilities.cpp  utilities.h
